--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ de:
   - title: Über uns
     url: /team
 
-  - title: Formate
-    url: /formate
+  - title: Workshops
+    url: /workshops
 
   - title: Info
     url: /info
