--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,9 +1,9 @@
-- name: "Auf Mikas Spuren", Pixelwelten
+- name: Auf Mikas Spuren, Pixelwelten
   url: 'https://fez-berlin.de/nc/programm/detailansicht/pixelwelten-fuer-kleine-gamer-maker-und-ihre-eltern-847/'
   date: 17.-18.02.
   city: FEZ, Berlin
   id: "0001"
-- name: "Game of Thoughts" in der Jugendbildungsstätte UHU
+- name: Game of Thoughts, Jugendbildungsstätte UHU
   date: 10.03.
   city: Ober-Mörlen-Langenheim
   id: "0002"
