changed link path to /workshops

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ gems:
 collections:
     workshops:
         output: true
-        permalink: /workshop/:path/
+        permalink: /workshops/:path/
     angebote:
         output: true
         permalink: /angebot/:path/
