--- a/_data/events.yml
+++ b/_data/events.yml
@@ -7,3 +7,8 @@
   date: 10.03.
   city: Ober-Mörlen-Langenheim
   id: "0002"
+- name: Verschiedene Workshops im Verschwörhaus Ulm
+  url: 'https://verschwoerhaus.de/'
+  date: 03.-05.04.
+  city: Ulm
+  id: "0003"
