--- a/_data/events.yml
+++ b/_data/events.yml
@@ -9,6 +9,6 @@
   id: "0002"
 - name: Verschiedene Workshops im Verschwörhaus Ulm
   url: 'https://verschwoerhaus.de/'
-  date: 03.-05.04.
+  date: 03.04.
   city: Ulm
   id: "0003"
