--- a/_data/events.yml
+++ b/_data/events.yml
@@ -15,3 +15,9 @@
   city: Ulm
   featured: true
   id: "0003"
+- name: Ungehörsam - Bildungsstätte der Humanistischen Union, Essen
+  url: 'https://verschwoerhaus.de/'
+  date: 17.04.
+  city: Essen
+  featured: true
+  id: "0004"
