--- a/_data/events.yml
+++ b/_data/events.yml
@@ -16,7 +16,7 @@
   featured: true
   id: "0003"
 - name: Ungehörsam - Bildungsstätte der Humanistischen Union, Essen
-  url: 'https://verschwoerhaus.de/'
+  url: ''
   date: 17.04.
   city: Essen
   featured: true
