--- a/_data/events.yml
+++ b/_data/events.yml
@@ -15,8 +15,7 @@
   city: Ulm
   featured: true
   id: "0003"
-- name: Ungehörsam - Bildungsstätte der Humanistischen Union, Essen
-  url: ''
+- name: Ungehörsam - Bildungsstätte der Humanistischen Union
   date: 17.04.
   city: Essen
   featured: true
