"Ulm" wegen Dopplung entfernt

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -9,7 +9,7 @@
   city: Ober-Mörlen-Langenheim
   featured: true
   id: "0002"
-- name: Verschiedene Workshops im Verschwörhaus Ulm
+- name: Verschiedene Workshops im Verschwörhaus
   url: 'https://verschwoerhaus.de/'
   date: 03.04.
   city: Ulm
