--- a/_data/events.yml
+++ b/_data/events.yml
@@ -12,7 +12,7 @@
   date: 2017-04-03
   city: Ulm
   featured: true
-- name: Workshop: Offene Daten in der Jugendarbeit (Fachkräfte)
+- name: Workshop - Offene Daten in der Jugendarbeit (Fachkräfte)
   url: 'https://demokratielabore.de/angebot/schulung'
   date: 2017-04-06
   city: Berlin
@@ -21,7 +21,7 @@
   date: 2017-04-17
   city: Essen
   featured: true
-- name: Workshop: Digitales Storytelling (Fachkräfte)
+- name: Workshop - Digitales Storytelling (Fachkräfte)
   url: 'https://demokratielabore.de/angebot/schulung'
   date: 2017-04-20
   city: Berlin
