--- a/_data/events.yml
+++ b/_data/events.yml
@@ -13,7 +13,7 @@
   city: Ulm
   featured: true
 - name: Workshop - Offene Daten in der Jugendarbeit (Fachkräfte)
-  url: 'https://demokratielabore.de/angebot/schulung'
+  url: 'https://goo.gl/forms/BIp8tBFxbTWUP2Ox2'
   date: 2017-04-06
   city: Berlin
   featured: true
@@ -22,17 +22,17 @@
   city: Essen
   featured: true
 - name: Workshop - Digitales Storytelling (Fachkräfte)
-  url: 'https://demokratielabore.de/angebot/schulung'
+  url: 'https://goo.gl/forms/BIp8tBFxbTWUP2Ox2'
   date: 2017-04-20
   city: Berlin
   featured: true
 - name: Workshop - Citizen Science (Fachkräfte)
-  url: 'https://demokratielabore.de/angebot/schulung'
+  url: 'https://goo.gl/forms/BIp8tBFxbTWUP2Ox2'
   date: 2017-05-11
   city: Berlin
   featured: true
 - name: Workshop - Twitterdebatten analysieren (Fachkräfte)
-  url: 'https://demokratielabore.de/angebot/schulung'
+  url: 'https://goo.gl/forms/BIp8tBFxbTWUP2Ox2'
   date: 2017-06-01
   city: Berlin
   featured: true
