--- a/_data/events.yml
+++ b/_data/events.yml
@@ -7,7 +7,7 @@
   date: 2017-03-10
   city: Ober-Mörlen-Langenheim
   featured: true
-- name: Verschiedene Workshops für Jugendliche im Verschwörhaus
+- name: Ungehörsam, Game of Thoughts & Invasion der Cybertrolle im Verschwörhaus
   url: 'https://verschwoerhaus.de/'
   date: 2017-04-03
   city: Ulm
