--- a/_data/events.yml
+++ b/_data/events.yml
@@ -6,7 +6,7 @@
 - name: Game of Thoughts - Jugendbildungsstätte UHU
   date: 2017-03-10
   city: Ober-Mörlen-Langenheim
-  featured: true
+  featured: false
 - name: Ungehörsam, Game of Thoughts & Invasion der Cybertrolle - Verschwörhaus
   url: 'https://verschwoerhaus.de/'
   date: 2017-04-03
