--- a/_data/events.yml
+++ b/_data/events.yml
@@ -8,7 +8,7 @@
   city: Ober-Mörlen-Langenheim
   featured: false
 - name: Ungehörsam, Game of Thoughts & Invasion der Cybertrolle - Verschwörhaus
-  url: 'https://verschwoerhaus.de/'
+  url: 'https://docs.google.com/forms/d/e/1FAIpQLSc_UgoiqOgtWvsV0zWX0WYUVOEwFNHaHZf9v2mZqMpCwc3SSg/viewform'
   date: 2017-04-03
   city: Ulm
   featured: true
