--- a/_data/events.yml
+++ b/_data/events.yml
@@ -17,7 +17,7 @@
   date: 2017-04-06
   city: Berlin
   featured: true
-- name: Ungehörsam - Bildungsstätte der Humanistischen Union
+- name: Ungehörsam - Weststadthalle
   date: 2017-04-17
   city: Essen
   featured: true
