--- a/_data/events.yml
+++ b/_data/events.yml
@@ -26,6 +26,10 @@
   date: 2017-04-20
   city: Berlin
   featured: true
+- name: Game of Thoughts & Infostand - DPSG Leuchtfeuer 2018
+  date: 2017-04-29
+  city: Westernohe
+  featured: true
 - name: Workshop - Citizen Science (Fachkräfte)
   url: 'https://goo.gl/forms/BIp8tBFxbTWUP2Ox2'
   date: 2017-05-11
