--- a/_data/events.yml
+++ b/_data/events.yml
@@ -11,7 +11,7 @@
   url: 'https://goo.gl/forms/BIp8tBFxbTWUP2Ox2'
   date: 2017-04-06
   city: Berlin
-  featured: true
+  featured: false
 - name: Ungehörsam - Weststadthalle
   date: 2017-04-17
   city: Essen
