--- a/_data/events.yml
+++ b/_data/events.yml
@@ -40,7 +40,7 @@
   date: 2017-06-01
   city: Berlin
   featured: true
-- name: Game of Thoughts - Jugend hackt
+- name: Game of Thoughts @ Jugend hackt
   url: 'https://demokratielabore.de/blog/Anmeldung-FFM'
   date: 2017-06-15
   city: Frankfurt am Main
