--- a/_data/events.yml
+++ b/_data/events.yml
@@ -25,27 +25,51 @@
   date: 2017-04-29
   city: Westernohe
   featured: true
+- name: Infoveranstaltung beim AdB
+  date: 2017-05-08
+  city: Berlin
+  featured: true
 - name: Workshop - Citizen Science (Fachkräfte)
   url: 'https://goo.gl/forms/BIp8tBFxbTWUP2Ox2'
   date: 2017-05-11
   city: Berlin
+  featured: true
+- name: Alle Workshops (außer Newsbusters) - DPSG Pfingstlager
+  date: 2017-05-18
+  city: Westernohe
   featured: true
 - name: Ungehörsam, Game of Thoughts & Invasion der Cybertrolle - Verschwörhaus
   url: 'https://docs.google.com/forms/d/e/1FAIpQLSc_UgoiqOgtWvsV0zWX0WYUVOEwFNHaHZf9v2mZqMpCwc3SSg/viewform'
   date: 2017-05-29
   city: Ulm
   featured: true
+- name: Invasion der Cybertrolle - Kurt-Löwenstein-Haus
+  date: 2017-05-30
+  city: Werneuchen
+  featured: true
 - name: Workshop - Twitterdebatten analysieren (Fachkräfte)
   url: 'https://goo.gl/forms/BIp8tBFxbTWUP2Ox2'
   date: 2017-06-01
   city: Berlin
+  featured: true
+- name: Game of Thoughts - TINCON
+  date: 2017-06-08
+  city: Werneuchen
   featured: true
 - name: Game of Thoughts @ Jugend hackt
   url: 'https://demokratielabore.de/blog/Anmeldung-FFM'
   date: 2017-06-15
   city: Frankfurt am Main
   featured: true
-
+- name: Data Expedition (Fachkräfte)
+  date: 2017-06-15
+  city: Berlin
+  featured: true
+- name: Datenspaziergang (Fachkräfte)
+  url: 'https://goo.gl/forms/BIp8tBFxbTWUP2Ox2'
+  date: 2017-06-17
+  city: Berlin
+  featured: true
 
 
 
