--- a/_data/events.yml
+++ b/_data/events.yml
@@ -56,6 +56,10 @@
   date: 2017-06-08
   city: Werneuchen
   featured: true
+- name: Infostand auf dem Deutschen Präventionstag
+  date: 2017-06-11
+  city: Dresden
+  featured: true
 - name: Game of Thoughts @ Jugend hackt
   url: 'https://demokratielabore.de/blog/Anmeldung-FFM'
   date: 2017-06-15
