--- a/_data/events.yml
+++ b/_data/events.yml
@@ -54,7 +54,7 @@
   featured: true
 - name: Game of Thoughts - TINCON
   date: 2017-06-08
-  city: Werneuchen
+  city: Berlin
   featured: true
 - name: Infostand auf dem Deutschen Präventionstag
   date: 2017-06-11
