--- a/_data/events.yml
+++ b/_data/events.yml
@@ -56,11 +56,11 @@
   date: 2017-06-08
   city: Berlin
   featured: true
-- name: Infostand auf dem Deutschen Präventionstag
+- name: Infostand - Deutscher Präventionstag
   date: 2017-06-11
   city: Dresden
   featured: true
-- name: Game of Thoughts @ Jugend hackt
+- name: Game of Thoughts - Jugend hackt
   url: 'https://demokratielabore.de/blog/Anmeldung-FFM'
   date: 2017-06-15
   city: Frankfurt am Main
