--- a/_data/events.yml
+++ b/_data/events.yml
@@ -20,7 +20,7 @@
   url: 'https://goo.gl/forms/BIp8tBFxbTWUP2Ox2'
   date: 2017-04-20
   city: Berlin
-  featured: true
+  featured: false
 - name: Game of Thoughts & Infostand - DPSG Leuchtfeuer 2018
   date: 2017-04-29
   city: Westernohe
