--- a/_data/events.yml
+++ b/_data/events.yml
@@ -67,6 +67,7 @@
   featured: true
 - name: Data Expedition (Fachkräfte)
   date: 2017-06-15
+  url:  'https://docs.google.com/forms/d/e/1FAIpQLSfOHh27JKObDc4HM5Na4nigwXIEeEIwTCsK-UvxEdtX2f_l4g/viewform'
   city: Berlin
   featured: true
 - name: Datenspaziergang (Fachkräfte)
