--- a/_data/events.yml
+++ b/_data/events.yml
@@ -63,7 +63,7 @@
 - name: Game of Thoughts - Jugend hackt
   url: 'https://demokratielabore.de/blog/Anmeldung-FFM'
   date: 2017-06-15
-  city: Frankfurt am Main
+  city: Museum für Kommunikation, Frankfurt am Main
   featured: true
 - name: Data Expedition (Fachkräfte)
   date: 2017-06-15
