--- a/_data/events.yml
+++ b/_data/events.yml
@@ -24,20 +24,20 @@
 - name: Game of Thoughts & Infostand - DPSG Leuchtfeuer 2018
   date: 2017-04-29
   city: Westernohe
-  featured: true
+  featured: false
 - name: Infoveranstaltung beim AdB
   date: 2017-05-08
   city: Berlin
-  featured: true
+  featured: false
 - name: Workshop - Citizen Science (Fachkräfte)
   url: 'https://goo.gl/forms/BIp8tBFxbTWUP2Ox2'
   date: 2017-05-11
   city: Berlin
-  featured: true
+  featured: false
 - name: Alle Workshops (außer Newsbusters) - DPSG Pfingstlager
   date: 2017-05-18
   city: Westernohe
-  featured: true
+  featured: false
 - name: Ungehörsam, Game of Thoughts & Invasion der Cybertrolle - Verschwörhaus
   url: 'https://docs.google.com/forms/d/e/1FAIpQLSc_UgoiqOgtWvsV0zWX0WYUVOEwFNHaHZf9v2mZqMpCwc3SSg/viewform'
   date: 2017-05-29
