--- a/_data/events.yml
+++ b/_data/events.yml
@@ -79,6 +79,10 @@
   date: 2017-06-22
   city: Uelzen
   featured: true
+- name: Infostand auf der YOU
+  date: 2017-06-22
+  city: Berlin
+  featured: true
 - name: Newsbusters - Medienscouts im Jugendcentrum
   date: 2017-07-11
   city: Kaarst
