--- a/_data/events.yml
+++ b/_data/events.yml
@@ -95,3 +95,7 @@
   date: 2017-07-24
   city: Kaarst
   featured: true
+- name: Invasion der Cybertrolle - Jugendseelsorgekonferenz
+  date: 2017-08-29
+  city: Kaarst
+  featured: true
