--- a/_data/events.yml
+++ b/_data/events.yml
@@ -97,5 +97,5 @@
   featured: true
 - name: Invasion der Cybertrolle - Jugendseelsorgekonferenz
   date: 2017-08-29
-  city: Kaarst
+  city: Bad Dürkheim
   featured: true
