--- a/_data/events.yml
+++ b/_data/events.yml
@@ -95,6 +95,10 @@
   date: 2017-07-24
   city: Kaarst
   featured: true
+- name: Kick-off Digital-AG - Jugendzentrum klex
+  date: 2017-08-14
+  city: Greifswald
+  featured: true
 - name: Invasion der Cybertrolle - Jugendseelsorgekonferenz
   date: 2017-08-29
   city: Bad Dürkheim
