--- a/_data/events.yml
+++ b/_data/events.yml
@@ -108,7 +108,7 @@
   date: 2017-09-06
   city: Linz, Österreich
   featured: true
-- name: Game of Thoughts - Tagung: It´s Democracy, stupid!
+- name: Game of Thoughts - Tagung It´s Democracy, stupid!
   url: 'https://www.gesichtzeigen.de/its-democracy-stupid-2018/'
   date: 2017-09-18
   city: Linz, Österreich
