--- a/_data/events.yml
+++ b/_data/events.yml
@@ -111,5 +111,5 @@
 - name: Game of Thoughts - Tagung It´s Democracy, stupid!
   url: 'https://www.gesichtzeigen.de/its-democracy-stupid-2018/'
   date: 2017-09-18
-  city: Linz, Österreich
+  city: Düsseldorf
   featured: true
