--- a/_data/events.yml
+++ b/_data/events.yml
@@ -94,7 +94,7 @@
 - name: Game of Thoughts & Auf Mikas Spuren - Jugendcentrum
   date: 2017-07-24
   city: Kaarst
-  featured: true
+  featured: false
 - name: Kick-off Digital-AG - Jugendzentrum klex
   date: 2017-08-14
   city: Greifswald
