--- a/_data/events.yml
+++ b/_data/events.yml
@@ -118,3 +118,12 @@
   date: 2017-09-24
   city: Berlin
   featured: true
+- name: Invasion der Cybertrolle - Bund der Deutschen Landjugend
+  date: 2017-10-13
+  city: Berlin
+  featured: true
+- name: Game of Thoughts @ Jugend hackt
+  url: 'https://goo.gl/forms/pkEMlreahiRHrOXe2'
+  date: 2017-10-19
+  city: Berlin
+  featured: true
