--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,15 +2,19 @@ de:
   - title: Blog
     url: /blog
 
-  - title: Über uns
+  - title: Team
     url: /team
 
   - title: Mitmachen
     url: /mitmachen
+
+  - title: Digital-AGs
+    url: /angebot/digital-ags
 
   - title: Workshops
     url: /workshops
 
   - title: Info
     url: /info
+
 
