--- a/_data/events.yml
+++ b/_data/events.yml
@@ -107,7 +107,7 @@
   url: 'https://www.aec.at/error/de/'
   date: 2017-09-06
   city: Linz, Österreich
-  featured: true
+  featured: false
 - name: Game of Thoughts - Tagung It´s Democracy, stupid!
   url: 'https://www.gesichtzeigen.de/its-democracy-stupid-2018/'
   date: 2017-09-19
@@ -116,6 +116,14 @@
 - name: Open Space - Konferenz zur bundespolitischen Jugendstrategie
   url: 'https://www.jugendgerecht.de/aktuelles/veranstaltungen/politik-fuer-mit-und-von-jugend-konferenz-zur-bundespolitischen-jugendstrategie/'
   date: 2017-09-24
+  city: Berlin
+  featured: true
+- name: Input zur Bedarfsanalyse - AG Soziale Medien der Amadeu-Antonio-Stiftung
+  date: 2017-09-28
+  city: Berlin
+  featured: true
+- name: Infostand - Maus-Türöffner-Tag in der Heinrich-Böll-Stiftung
+  date: 2017-10-03
   city: Berlin
   featured: true
 - name: Invasion der Cybertrolle - Bund der Deutschen Landjugend
