--- a/_data/events.yml
+++ b/_data/events.yml
@@ -126,6 +126,10 @@
   date: 2017-10-03
   city: Berlin
   featured: true
+- name: Ungehörsam - youncoN
+  date: 2017-10-05
+  city: Wolfsburg
+  featured: true
 - name: Invasion der Cybertrolle - Bund der Deutschen Landjugend
   date: 2017-10-13
   city: Berlin
