--- a/_data/events.yml
+++ b/_data/events.yml
@@ -126,7 +126,7 @@
   date: 2017-10-03
   city: Berlin
   featured: true
-- name: Ungehörsam - youncoN
+- name: Ungehörsam - youcoN
   date: 2017-10-05
   city: Wolfsburg
   featured: true
