--- a/_data/events.yml
+++ b/_data/events.yml
@@ -134,6 +134,10 @@
   date: 2017-10-13
   city: Berlin
   featured: true
+- name: Datenspaziergang mit jugend.beteiligen.jetzt
+  date: 2017-10-16
+  city: Berlin
+  featured: true
 - name: Game of Thoughts @ Jugend hackt
   url: 'https://goo.gl/forms/pkEMlreahiRHrOXe2'
   date: 2017-10-19
