--- a/_data/events.yml
+++ b/_data/events.yml
@@ -122,7 +122,7 @@
   date: 2017-09-28
   city: Berlin
   featured: true
-- name: Infostand - Maus-Türöffner-Tag in der Heinrich-Böll-Stiftung
+- name: Newsbusters - Maus-Türöffner-Tag in der Heinrich-Böll-Stiftung
   date: 2017-10-03
   city: Berlin
   featured: true
