--- a/_data/events.yml
+++ b/_data/events.yml
@@ -112,7 +112,7 @@
   url: 'https://www.gesichtzeigen.de/its-democracy-stupid-2018/'
   date: 2017-09-19
   city: Düsseldorf
-  featured: true
+  featured: false
 - name: Open Space - Konferenz zur bundespolitischen Jugendstrategie
   url: 'https://www.jugendgerecht.de/aktuelles/veranstaltungen/politik-fuer-mit-und-von-jugend-konferenz-zur-bundespolitischen-jugendstrategie/'
   date: 2017-09-24
