--- a/_data/events.yml
+++ b/_data/events.yml
@@ -156,6 +156,10 @@
   date: 2017-11-01
   city: Ulm
   featured: true
+- name: Minetest Hero Theater - PLAY18
+  date: 2017-11-02
+  city: Hamburg
+  featured: true
 - name: Infostand - Tag der Medienkompetenz
   date: 2017-11-05
   city: Düsseldorf
