--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,6 +14,9 @@ de:
   - title: Workshops
     url: /workshops
 
+  - title: Selbstlernmaterial
+    url: /materialsammlung
+
   - title: Info
     url: /info
 
