--- a/_data/events.yml
+++ b/_data/events.yml
@@ -121,20 +121,20 @@
 - name: Input zur Bedarfsanalyse - AG Soziale Medien der Amadeu-Antonio-Stiftung
   date: 2017-09-28
   city: Berlin
-  featured: true
+  featured: false
 - name: Newsbusters - Maus-Türöffner-Tag in der Heinrich-Böll-Stiftung
   url:  'https://www.wdrmaus.de/tuer_oeffner_tag/2018/index.php5?detail=696548'
   date: 2017-10-03
   city: Berlin
-  featured: true
+  featured: false
 - name: Ungehörsam - youcoN
   date: 2017-10-05
   city: Wolfsburg
-  featured: true
+  featured: false
 - name: Citizen Science - youcoN
   date: 2017-10-06
   city: Wolfsburg
-  featured: true
+  featured: false
 - name: Minetest Hero Theater - Ev. Jugend Baden-Baden
   date: 2017-10-09
   city: Neckarzimmern
