--- a/_data/unterthema-color.yml
+++ b/_data/unterthema-color.yml
@@ -1,4 +1,6 @@
-unter1-2: red
-unter1-1: black
-unter2-2: orange
+unter1-1: yellow
+unter1-2: orange
+unter1-3: darkred
 unter2-1: yellow
+unter2-2: darkred
+unter2-3: orange
