--- a/_data/unterthema.yml
+++ b/_data/unterthema.yml
@@ -1,5 +1,6 @@
 unter1-2: Unter thema 2
 unter1-1: Unter thema 1
+unter2-4: Leben in der Stadt
 unter2-3: Daten und Transparenz
-unter2-2: Aktive Teilhabe
-unter2-1: Gemeinsam leben & teilen
+unter2-2: Politik gestalten
+unter2-1: Teilen & erhalten
