changed link of the topic cards, changed colors

--- a/_data/unterthema-color.yml
+++ b/_data/unterthema-color.yml
@@ -1,7 +1,7 @@
 unter1-1: yellow
 unter1-2: orange
 unter1-3: darkred
-unter2-1: yellow
+unter2-1: orange
 unter2-2: darkred
-unter2-3: orange
-unter2-4: black
+unter2-3: purple
+unter2-4: yellow
