--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@ de:
   - title: Blog
     url: /blog
 
-  - title: Selbstlernmaterial
+  - title: Aktiv werden
     url: /materialsammlung
 
   - title: Digital-AGs
