--- a/_data/events.yml
+++ b/_data/events.yml
@@ -177,3 +177,9 @@
   date: 2018-11-30
   city: Berlin
   featured: true
+- name: Start Digital-AG
+  url:  'https://demokratielabore.de/blog/digital-ag-start-frankfurt-am-main'
+  date: 2019-01-12
+  city: Frankfurt am Main
+  featured: true
+ 
