fixed looking of imgs / created pull of img url from cards

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@ de:
   - title: Blog
     url: /blog
 
-  - title: Aktiv werden
+  - title: Materialien & Ideen
     url: /materialsammlung
 
   - title: Digital-AGs
