--- a/_data/events.yml
+++ b/_data/events.yml
@@ -187,7 +187,7 @@
   city: Frankfurt am Main
   featured: true
 - name: instAR.lab - Digital-AG
-  url:  'https://demokratielabore.de/blog/digital-ag-start-frankfurt-am-main'
+  url:  'http://www.lebenx0.de/veranstaltungen/'
   date: 2019-02-09
   city: Frankfurt am Main
   featured: true
