--- a/staticman.yml
+++ b/staticman.yml
@@ -8,7 +8,7 @@ ideas:
   path              : "materialsammlung/ideas"
   requiredFields    : ['title', 'desc']
   transforms:
-    details            : frontmatterContent
+    details         : "frontmatterContent"
   generatedFields:
     date:
       type          : "date"
