--- a/_data/unterthema-color.yml
+++ b/_data/unterthema-color.yml
@@ -1,6 +1,7 @@
-unter1-1: yellow
-unter1-2: orange
+unter1-1: orange
+unter1-2: purple
 unter1-3: darkred
+unter1-4: yellow
 unter2-1: orange
 unter2-2: purple
 unter2-3: darkred
