--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,3 +1,6 @@
+- name: Seit April 2019 ist das Modellprojekt „Demokratielabore“ beendet! 
+  url: 
+  city: 
 - name: Auf Mikas Spuren - Pixelwelten im FEZ
   url: 'https://fez-berlin.de/nc/programm/detailansicht/pixelwelten-fuer-kleine-gamer-maker-und-ihre-eltern-847/'
   date: 2017-02-17
